<resources>
    <string name="app_name">FireNotify</string>
    <string name="fcm_key">AAAAaOmKSfc:APA91bGabQ9tUXtf5iUOycizl7Wpw0E875EiyxC8E9C2MyfMuG2anvfErYjrwEr4xFsoIVoIalqG4IupliY9436j4HNaL8jgDPEag2S0nSuI3TeU9TTbaK2bj8CFUVBDS6KCZib6Zo0X</string>
    <string name="preference_file">FireNotify_Preferences</string>
    <string name="keyLabel">API Key:</string>
    <string name="tokenLabel">Token:</string>
    <string name="copy_key">Copy key</string>
    <string name="share_key">Share key</string>
    <string name="copy_token">Copy token</string>
    <string name="share_token">Share token</string>
    <string name="versionLabel">Version:</string>
    <string name="title_activity_main">FireNotify</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="file_log_checkbox">Log to file on SD card (FireNotify.log)</string>
</resources>
